# OSISP

Kyrs/: CMakeLists.txt  main.cpp  main.h
Kyrs/application/: Applicaton.cpp  Applicaton.h
Kyrs/atom/: Atom.cpp  Atom.h  BaseAtom.cpp  BaseAtom.h  IAtom.cpp  IAtom.h  Minus.cpp  Minus.h  Plus.cpp  Plus.h
Kyrs/circle/: Circle.cpp  Circle.h  LinkedList.cpp  LinkedList.h
Lab1/Project1/: Project1.sln
Lab1/Project1/Debug/: Project1.ilk
Lab1/Project1/Project1/: Project1.vcxproj  Source.cpp
Lab1/Project1/Project1/Debug/: Project1.exe.recipe  Project1.recipe  Source.nativecodeanalysis.sarif  Source.nativecodeanalysis.xml  source.obj.enc  vc142.idb
Lab1/Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab2/Project2/Debug/: Project2.ilk
Lab2/Project2/Project2/: Project2.cpp
Lab2/Project2/Project2/Debug/: Project2.exe.recipe  vc142.idb
Lab2/Project2/Project2/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab3/Compile/: main.cpp  test.cpp
Lab4/: CMakeLists.txt  ThreadpoolQueueProcessor.cc  ThreadpoolQueueProcessor.h  main.cpp  out.txt  test.txt
Lab4/queue/: Queue.cpp  Queue.h
Lab4/queueElem/: QueueElem.cpp  QueueElem.h
Lab4/queueHandler/: QueueHandler.cpp  QueueHandler.h  ThreadpoolQueueProcessor.cpp  ThreadpoolQueueProcessor.h
